refactor: refactoring create user  of use two principle SOLID
Refactoring create user of use two principle SOLID o principle unique responsibility

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     }
   },
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
