--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
+    "test": "jest -i"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
@@ -34,7 +36,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
     "init": "0.1.2",
+    "jest": "^27.0.4",
     "prettier": "^2.3.0",
+    "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
